--- a/EFC2.0/Pages/self_service/attendance/summary.cshtml
+++ b/EFC2.0/Pages/self_service/attendance/summary.cshtml
@@ -26,7 +26,7 @@
                                     <div class="row mb-4">
                                         <div class="col-md-9"></div>
                                         <div class="col-md-3 mb-4 mt-2 justify-content-end">
-                                            <select class="form-select">
+                                            <select class="form-select" id="leaveYearSelect">
                                                 <option>2025</option>
                                                 <option>2024</option>
                                                 <option>2023</option>
@@ -40,7 +40,7 @@
                                                         <h2 class="rd-dialog-heading">Attendance Percentage</h2>
                                                     </div>
                                                     <div class="col-md-3">
-                                                        <select class="form-select">
+                                                        <select class="form-select" id="attendanceMonthSelect">
                                                             <option selected>Jan</option>
                                                             <option>Feb</option>
                                                             <option>Mar</option>
@@ -106,16 +106,7 @@
                                                             <td class="mat-cell cdk-cell">-</td>
                                                             <td class="mat-cell cdk-cell">-</td>
                                                         </tr>
-                                                        <tr class="mat-row cdk-row ng-star-inserted">
-                                                            <td class="mat-cell cdk-cell">Vacation Leave	</td>
-                                                            <td class="mat-cell cdk-cell">-</td>
-                                                            <td class="mat-cell cdk-cell">-</td>
-                                                            <td class="mat-cell cdk-cell">-</td>
-                                                        </tr>
-                                                       @*  <tr class="mat-row mat-no-data-row ng-star-inserted" role="row">
-                                                            <td colspan="9999" class="text-muted no-results ng-star-inserted"><img src="/images/No result found.svg" class="no-result-found"></td>
 
-                                                        </tr> *@
 
                                                     </tbody>
                                                     <tfoot role="rowgroup" class="mat-table-sticky" style="display: none; bottom: 0px; z-index: 10;">
@@ -125,77 +116,7 @@
                                         </div>
 
                                     </div>
-                                    <mat-paginator role="group" aria-label="Select page" class="mat-paginator">
-                                        <div class="mat-paginator-outer-container">
-                                            <div class="mat-paginator-container">
-                                                <div class="mat-paginator-page-size ng-star-inserted">
-                                                    <div class="mat-paginator-page-size-label"> Items per page: </div>
-                                                    <div class="div mat-paginator-page-size-select ng-tns-c111-1083 mat-primary div-type-mat-select div-appearance-legacy div-can-float div-should-float div-hide-placeholder ng-star-inserted">
-                                                        <div class="div-wrapper ng-tns-c111-1083">
-                                                            <div class="div-flex ng-tns-c111-1083">
-
-                                                                <div class="div-infix ng-tns-c111-1083">
-                                                                    <mat-select role="combobox" aria-autocomplete="none" aria-haspopup="true" class="mat-select ng-tns-c167-1084 ng-tns-c111-1083 ng-star-inserted" id="mat-select-124" tabindex="0" aria-expanded="false" aria-label="Items per page:" aria-required="false" aria-disabled="false" aria-invalid="false">
-                                                                        <div cdk-overlay-origin="" class="mat-select-trigger ng-tns-c167-1084">
-                                                                            <div class="mat-select-value ng-tns-c167-1084" id="mat-select-value-125">
-
-                                                                                <span class="mat-select-value-text ng-tns-c167-1084 ng-star-inserted">
-                                                                                    <span class="mat-select-min-line ng-tns-c167-1084 ng-star-inserted">10</span>
-                                                                                </span>
-
-                                                                            </div>
-                                                                            <div class="mat-select-arrow-wrapper ng-tns-c167-1084">
-                                                                                <div class="mat-select-arrow ng-tns-c167-1084"></div>
-                                                                            </div>
-                                                                        </div>
-
-                                                                    </mat-select>
-                                                                    <span class="div-label-wrapper ng-tns-c111-1083">
-
-                                                                    </span>
-                                                                </div>
-
-                                                            </div>
-                                                            <div class="div-underline ng-tns-c111-1083 ng-star-inserted"><span class="div-ripple ng-tns-c111-1083"></span></div>
-
-                                                            <div class="div-subscript-wrapper ng-tns-c111-1083">
-
-                                                                <div class="div-hint-wrapper ng-tns-c111-1083 ng-trigger ng-trigger-transitionMessages ng-star-inserted" style="opacity: 1; transform: translateY(0%);">
-
-                                                                    <div class="div-hint-spacer ng-tns-c111-1083"></div>
-                                                                </div>
-
-                                                            </div>
-                                                        </div>
-                                                    </div>
-
-                                                </div>
-
-                                                <div class="mat-paginator-range-actions">
-                                                    <div class="mat-paginator-range-label"> 0 of 0 </div>
-
-                                                    <button mat-icon-button="" type="button" class="mat-focus-indicator mat-tooltip-trigger mat-paginator-navigation-previous mat-icon-button mat-button-base mat-button-disabled" aria-label="Previous page" disabled="true">
-                                                        <span class="mat-button-wrapper">
-                                                            <svg viewBox="0 0 24 24" focusable="false" class="mat-paginator-icon">
-                                                                <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"></path>
-                                                            </svg>
-                                                        </span>
-                                                        <span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span>
-                                                    </button>
-
-                                                    <button mat-icon-button="" type="button" class="mat-focus-indicator mat-tooltip-trigger mat-paginator-navigation-next mat-icon-button mat-button-base mat-button-disabled" aria-label="Next page" disabled="true">
-                                                        <span class="mat-button-wrapper">
-                                                            <svg viewBox="0 0 24 24" focusable="false" class="mat-paginator-icon">
-                                                                <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path>
-                                                            </svg>
-                                                        </span>
-                                                        <span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span>
-                                                    </button>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </mat-paginator>
+                                  
                                 </div>
                             </mat-card>
                         </div>
@@ -207,82 +128,180 @@
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://unpkg.com/apexcharts@3.22.1/dist/apexcharts.min.js"></script>
-<script>
-    var options = {
-        series: [3, 4, 8, 3],
-        chart: {
-            type: 'donut',
-            width: 400
-        },
-        labels: ['Present', 'Partially Present', 'Absent', 'Leave'],
-        legend: {
-            show: false
-        },
-        legend: {
-            show: true,
-            position: 'right',
-            markers: {
-                shape: 'square'
-            }
-        },
-        plotOptions: {
-            pie: {
-                donut: {
-                    size: '50%'
-                }
-            }
-        },
-        dataLabels: {
-            enabled: false
-        },
-        responsive: [{
-            breakpoint: 480,
-            options: {
-                chart: {
-                    width: 200
-                }
-            }
-        }]
-    };
-    var chart = new ApexCharts(document.querySelector("#chartTotalAssets"), options);
-    chart.render();
 
-    var optionsFaulty = {
-        series: [3, 4, 9],
-        chart: {
-            type: 'donut',
-            width: 400
-        },
-        labels: ['Approved', 'Pending', 'Rejected'],
-        legend: {
-            show: false
-        },
-        dataLabels: {
-            enabled: false
-        },
-        plotOptions: {
-            pie: {
-                donut: {
-                    size: '50%'
+
+<script>
+    var chart;
+
+    function loadAttendanceChart(monthNumber) {
+        $.ajax({
+            url: '/Attendance/GetMonthlyAttendanceData?month=' + monthNumber,
+            type: 'GET',
+            success: function (data) {
+                const seriesData = [
+                    data.present || 0,
+                    data.partialpresent || 0,
+                    data.absent || 0,
+                    data.leave || 0
+                ];
+
+                chart.updateSeries(seriesData);
+            },
+            error: function () {
+                alert('Failed to load attendance data.');
+            }
+        });
+    }
+
+    $(document).ready(function () {
+
+        var options = {
+            series: [0, 0, 0, 0],
+            chart: {
+                type: 'donut',
+                width: 400
+            },
+            labels: ['Present', 'Partially Present', 'Absent', 'Leave'],
+            colors: ['#28a745', '#FFA500', '#FF0000', '#007BFF'],
+            legend: {
+                show: true,
+                position: 'right',
+                markers: {
+                    shape: 'square'
                 }
-            }
-        },
-        legend: {
-            show: true,
-            position: 'right',
-            markers: {
-                shape: 'square'
-            }
-        },
-        responsive: [{
-            breakpoint: 480,
-            options: {
-                chart: {
-                    width: 200
+            },
+            plotOptions: {
+                pie: {
+                    donut: {
+                        size: '50%'
+                    }
                 }
+            },
+            dataLabels: {
+                enabled: false
+            },
+            responsive: [{
+                breakpoint: 480,
+                options: {
+                    chart: {
+                        width: 200
+                    }
+                }
+            }]
+        };
+
+        chart = new ApexCharts(document.querySelector("#chartTotalAssets"), options);
+        chart.render();
+
+        // Load current month attendance on page load
+        const today = new Date();
+        const currentMonth = today.getMonth() + 1;
+        $('#attendanceMonthSelect').val(today.toLocaleString('default', { month: 'short' }));
+        loadAttendanceChart(currentMonth);
+
+        // On dropdown change
+        $('#attendanceMonthSelect').on('change', function () {
+            const selectedMonthIndex = this.selectedIndex + 1; // 1-based month
+            loadAttendanceChart(selectedMonthIndex);
+        });
+    });
+</script>
+
+
+<script>
+
+       $(document).ready(function () {
+        $('#leaveYearSelect').on('change', function () {
+            var selectedYear = $(this).val();
+
+            $.ajax({
+                url: '/Attendance/GetLeaveStatusCounts',
+                type: 'GET',
+                data: { year: selectedYear },
+                success: function (data) {
+                    var optionsFaulty = {
+                        series: [data.approved, data.pending, data.rejected],
+                        chart: {
+                            type: 'donut',
+                            width: 400
+                        },
+                        labels: ['Approved', 'Pending', 'Rejected'],
+                        colors: ['#28a745', '#007bff', '#FF0000'],
+                        legend: {
+                            show: true,
+                            position: 'right',
+                            markers: {
+                                shape: 'square'
+                            }
+                        },
+                        dataLabels: {
+                            enabled: false
+                        },
+                        plotOptions: {
+                            pie: {
+                                donut: {
+                                    size: '50%'
+                                }
+                            }
+                        },
+                        responsive: [{
+                            breakpoint: 480,
+                            options: {
+                                chart: {
+                                    width: 200
+                                }
+                            }
+                        }]
+                    };
+
+                    // Destroy previous chart instance if needed
+                    if (window.leaveChart) {
+                        window.leaveChart.destroy();
+                    }
+
+                    // Store chart instance globally so it can be destroyed next time
+                    window.leaveChart = new ApexCharts(document.querySelector("#chartTotalFaultyAssets"), optionsFaulty);
+                    window.leaveChart.render();
+                }
+            });
+        });
+
+        // 👇 Trigger the change event on page load
+        $('#leaveYearSelect').trigger('change');
+    });
+
+</script>
+
+<script>
+
+        $(document).ready(function () {
+        $.ajax({
+            url: '/Attendance/GetLeaveSummary',
+            type: 'GET',
+            success: function (data) {
+                const tbody = $('.mat-table tbody');
+                tbody.empty();
+
+                if (data.length === 0) {
+                    tbody.append('<tr><td colspan="4">No leave data found.</td></tr>');
+                }
+
+                data.forEach(item => {
+                    const row = `
+                        <tr class="mat-row cdk-row">
+                            <td class="mat-cell cdk-cell">${item.leaveType}</td>
+                            <td class="mat-cell cdk-cell">${item.granted}</td>
+                            <td class="mat-cell cdk-cell">${item.taken}</td>
+                            <td class="mat-cell cdk-cell">${item.balance}</td>
+                        </tr>`;
+                    tbody.append(row);
+                });
+            },
+            error: function () {
+                $('.mat-table tbody').html('<tr><td colspan="4">Error loading leave data.</td></tr>');
             }
-        }]
-    };
-    var chart = new ApexCharts(document.querySelector("#chartTotalFaultyAssets"), optionsFaulty);
-    chart.render();
+        });
+    });
+
+
 </script>
