--- a/EFC2.0/wwwroot/css/dashboard.css
+++ b/EFC2.0/wwwroot/css/dashboard.css
@@ -306,7 +306,7 @@
     cursor: pointer
 }
 
-.leave-bg {
+.leave-bg  {
     background-color: #fff;
     border-radius: 8px;
     padding: 16px;
@@ -424,7 +424,8 @@
 .leave-border {
     border: 1px solid #E4E6E9;
     border-radius: 8px;
-    padding: 10px
+    padding: 10px;
+    text-align:center;
 }
 
 .leave-head {
